Changes in Release 1.4.2
=============================================
[JXT-108] - Encrypter setKeyResolverCriteria() typo, should be getKeyResolverCriteria()
[JXT-109] - SimpleKeyInfoReferenceEncryptedKeyResolver constructor missing 'public' modifier 

Changes in Release 1.4.1
=============================================
[JXT-102] - Decrypter should be defensive about Santuario and Java crypto classes throwing unchecked exceptions 
[JXT-103] - XMLTooling failed to pass veracode due Use of Wrong Operator in String Comparison (CWE ID 597) 
[JXT-104] - ClasspathResolver doesn't set systemId on resolved InputSources failing subsequent resolutions
[JXT-105] - DefaultBootstrap unexpectedly uses a parser StaticBasicParserPool with expandEntityReferences set to true
[JXT-106] - Update Apache Santuario (xmlsec) to 1.5.6
[JXT-107] - Decrypter internal ParserPool has unsafe defaults

Changes in Release 1.4.0
=============================================
[JXT-24] - Support for CDATA content
[JXT-87] - Code in AbstractSignableXMLObject etc unnecessarily calls NodeList which is thread-unsafe
[JXT-88] - AbstractXMLObject unnecessarily creates a new QName in getElementQName
[JXT-89] - AbstractXMLObjectUnmarshaller should check log level before *creating* QNames and logging
[JXT-90] - NullPointerException in createClassInstance in org.opensaml.xml.XMLConfigurator 
[JXT-93] - X509Util.determineEntityCertificate doesn't catch lower layer SecurityException
[JXT-96] - Decrypter doesn't fall back to default unmarshaller
[JXT-97] - DigestMethod builder defaults to wrong namespace/prefix
[JXT-98] - Add support for configuring PKIX policy checking in the PKIX trust engine
[JXT-99] - Signature verification exception on Java 7
[JXT-100] - missing SignatureConstants values for SHA-256 and SHA-512 digests 
[JXT-101] - Wrong key algorithm used for elliptic curve keys

Changes in Release 1.3.4
=============================================